fix: add styles for hide scrollbar

--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -34,3 +34,16 @@ dialog::backdrop {
 a {
   cursor: pointer;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  /* IE and Edge */
+  -ms-overflow-style: none;
+  /* Firefox */
+  scrollbar-width: none;
+}
